infra/k8s/realtime/internal-nlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: market-realtime-nlb
  namespace: app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
    service.beta.kubernetes.io/aws-load-balancer-private-ipv4-addresses: "10.14.110.239"
    service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-05c7cf27d8a20289a"
spec:
  type: LoadBalancer
  selector:
    app: market-realtime-service     # 기존 시세 Pod 라벨
  ports:
    - port: 8087
      targetPort: 8087
      protocol: TCP
