infra/k8s/realtime/user-realtime-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-realtime-service
  namespace: app
  annotations:
    configmap.reloader.stakater.com/reload: maesoongan-realtime-config
    secret.reloader.stakater.com/reload: user-realtime-service-secret
  labels:
    app: user-realtime-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: user-realtime-service
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8087"
      labels:
        app: user-realtime-service
    spec:
      nodeSelector:
        role: realtime
      containers:
        - name: user-realtime-service
          image: 295234319852.dkr.ecr.ap-northeast-2.amazonaws.com/maesoongan/user-realtime-service:4b9c6cec2300192e47576165df3a7df1871c220b
          imagePullPolicy: Always
          ports:
            - containerPort: 8087
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8087
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8087
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: user-realtime-service
  namespace: app
  labels:
    app: user-realtime-service
spec:
  type: ClusterIP
  selector:
    app: user-realtime-service
  ports:
    - name: http
      port: 8087
      targetPort: 8087
